--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "react-router-redux": "^5.0.0-alpha.6",
+    "react-sortable-hoc": "^0.6.8",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.6",
+    "socket.io-client": "^2.0.4",
     "style-loader": "^0.18.2",
     "webpack": "^2.6.1",
     "webpack-dev-server": "^2.6.1",
